@@ -1,3 +1,8 @@
+<b>2011-07-10</b>
+
+* Bugfix: Unable to login after session expiry (2915135)
+* Tech: Airport search migrated to JSON, cleaned up
+ 
 <b>2011-06-18</b>
 
 * Bugfix: Adding new flights after screen reload fixed
